fix(analytics):fix overflow of weekly dropdown in mobile

--- a/src/css/_analytics.scss
+++ b/src/css/_analytics.scss
@@ -25,6 +25,10 @@
       display: flex;
       justify-content: space-between;
 
+      @media (max-width: 768px) {
+        flex-wrap: wrap;
+      }
+
       h2 {
         color: $primary-text-color;
         font-size: 2rem;
@@ -116,6 +120,9 @@
             transform: rotate(-180deg);
           }
 
+          @media (max-width: 768px) {
+            width: 100%;
+          }
           .arrow-icon {
             width: 100%;
             height: 100%;
